--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,31 +6,30 @@ NODE_ENV=development
 MONGO_URI=mongodb://localhost:27017/progress_monitoring
 
 # JWT Secret (generate a random string for production)
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+JWT_SECRET=your_super_secret_jwt_key_change_this_to_something_secure
 
 # Email Configuration (Gmail)
+# Generate an App Password: https://myaccount.google.com/apppasswords
 EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_16_digit_app_password
+EMAIL_PASS=your_gmail_app_password_here
 
 # Frontend URL
 CLIENT_URL=http://localhost:3000
 
-# Model Output Path
+# Model Configuration
 MODEL_OUTPUT_PATH=../model_simulation/output/progress_data.json
+IMAGES_DIR=/absolute/path/to/your/images/directory
 
-# Images Directory (absolute path to your images folder)
-IMAGES_DIR=/path/to/your/images/folder
+# Python Environment
+PYTHON_EXEC=/absolute/path/to/model_simulation/.venv/bin/python
 
-# Python Executable (for model simulation)
-PYTHON_EXEC=python3
+# User Credentials for Seeding
+# These will be used to create initial owner and customer accounts
+OWNER_EMAIL=owner@example.com
+OWNER_PASSWORD=SecureOwnerPassword123
 
-# Real Customer Configuration (for actual progress tracking)
-REAL_CUSTOMER_EMAIL=customer1@company.com
-REAL_CUSTOMER_PASSWORD=Customer@123
-
-# Owner Account Configuration
-OWNER_EMAIL=owner@factory.com
-OWNER_PASSWORD=Owner@123
+REAL_CUSTOMER_EMAIL=customer@example.com
+REAL_CUSTOMER_PASSWORD=SecureCustomerPassword123
 
 # Expected Progress Per Cycle (for real customer)
 REAL_EXPECTED_PER_CYCLE=7
